Mon Feb 14 11:32:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/AbstractBase.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:18:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.h:
        * tao/Profile.inl:
        * tao/Profile.cpp:
          Committed back these files, also didn't break ImR

Mon Feb 14 11:04:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
        * tao/ObjectKey_Table.h:
        * tao/ObjectKey_Table.inl:
        * tao/ObjectKey_Table.cpp:
          Reapplied changes, didn't break ImR example

Mon Feb 14 10:44:30 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.h:
        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:
        * tao/Client_Strategy_Factory.h:
        * tao/Client_Strategy_Factory.cpp:
        * tao/Configurable_Refcount.h:
        * tao/Configurable_Refcount.inl:
        * tao/Configurable_Refcount.cpp:
        * tao/IORTable/Table_Adapter.h:
        * tao/IORTable/Table_Adapter.cpp:
        * tao/Messaging/AMH_Response_Handler.cpp:
        * tao/ORB_Core.h:
        * tao/ORB_Core.cpp:
        * tao/Object.h:
        * tao/Object.inl:
        * tao/Object.cpp:
        * tao/ObjectKey_Table.h:
        * tao/ObjectKey_Table.cpp:
        * tao/On_Demand_Fragmentation_Strategy.h:
        * tao/PortableServer/Non_Servant_Upcall.cpp:
        * tao/PortableServer/Object_Adapter.h:
        * tao/PortableServer/Object_Adapter.inl:
        * tao/PortableServer/Object_Adapter.cpp:
        * tao/PortableServer/Root_POA.h:
        * tao/PortableServer/Root_POA.inl:
        * tao/PortableServer/Root_POA.cpp:
        * tao/PortableServer/ServantRetentionStrategyRetain.cpp:
        * tao/PortableServer/Servant_Upcall.cpp:
        * tao/Profile.h:
        * tao/Profile.inl:
        * tao/Profile.cpp: