@@ -1,3 +1,9 @@
+Mon Feb 14 11:47:38 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/IORTable/Table_Adapter.h:
+        * tao/IORTable/Table_Adapter.cpp:
+          Committed back these files, also didn't break ImR
+
 Mon Feb 14 11:32:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/Valuetype/AbstractBase.h:
